# biopass

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  lefthook.yml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: distro_bug_report.md
.github/scripts/: star-history-svg.mjs
.github/workflows/: release.yaml  star-history.yml
app/: biome.json  index.html  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  routeTree.gen.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/assets/pam-configs/: biopass
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 001_initial.sql
app/src-tauri/scripts/: biopass.desktop  biopass_key_generator.py  biopass_key_test.py  download_models.sh  postinst  prerm  prerm-rpm
app/src-tauri/src/: camera.rs  config.rs  db.rs  face.rs  face_session.rs  file_utils.rs  fingerprint.rs  fingerprint_ffi.rs  lib.rs  main.rs  models.rs  pam.rs  paths.rs  system.rs  voice.rs
app/src-tauri/testdata/: config_v2.yaml
app/src/app/: __root.tsx  advanced.tsx  models.tsx
app/src/app/-components/: AddModelDialog.tsx  ModelStatus.tsx  RenameModelDialog.tsx
app/src/app/configuration/: page.tsx
app/src/app/configuration/-components/: FingerprintSetting.tsx  MethodConfig.tsx  StrategyConfig.tsx  validation.ts
app/src/app/configuration/-components/face/: AdvancedFaceSettings.tsx  FaceCapture.tsx  FaceSetting.tsx
app/src/app/configuration/-components/methods/shared/: ModelSelect.tsx  Threshold.tsx
app/src/commands/: face.ts  index.ts  models.ts  system.ts
app/src/components/config/: ConfigPage.tsx  MethodsSection.tsx  StrategySection.tsx  index.ts  validation.ts
app/src/components/config/methods/: FaceCaptureSection.tsx  FingerprintSection.tsx  VoiceRecordingSection.tsx
app/src/components/config/methods/shared/: ModelSelectField.tsx  SliderField.tsx
app/src/components/models/: AddModelDialog.tsx  ModelCard.tsx  ModelDialog.tsx  ModelStatus.tsx  ModelsPage.tsx  index.ts
app/src/components/samples/: CameraSample.tsx  VoiceSample.tsx
app/src/components/ui/: select.tsx  slider.tsx  tooltip.tsx
app/src/types/: config.ts
auth/: .clang-format  .gitignore  BundleLibcamera.cmake  CMakeLists.txt  Dependencies.cmake
auth/config/: CMakeLists.txt  face_config.cc  face_config.h
auth/core/: CMakeLists.txt  antispoof_policy.h  auth_config.cc  auth_config.h  auth_manager.cc  auth_manager.h  auth_method.h  model_registry.cc  model_registry.h  retry_strategy.h
auth/face/: CMakeLists.txt  face_auth.cc  face_auth.h  image_utils.h
auth/face/antispoofing/: CMakeLists.txt  antispoof_check.cc  antispoof_check.h  face_as.cc  face_as.h  ir_camera_as.cc  ir_camera_as.h  ir_liveness_analyzer.cc  ir_liveness_analyzer.h
auth/face/common/: camera_capture.cc  camera_capture.h  onnx_session.cc  onnx_session.h  pixel_convert.cc  pixel_convert.h
auth/face/detection/: CMakeLists.txt  face_detection.cc  face_detection.h  utils.cc  utils.h
auth/face/models/: edgeface_s_gamma_05_ts.pt  minifas_v2.onnx  mobilenetv3_antispoof_ts.pt  yolov11n-face.torchscript
auth/face/recognition/: CMakeLists.txt  face_recognition.cc  face_recognition.h
auth/fingerprint/: CMakeLists.txt  README.md  fingerprint_auth.cc  fingerprint_auth.h  fingerprint_ffi.cc  fingerprint_ffi.h
auth/pam/: CMakeLists.txt  README.md  helper.cc  identify.cc  identify.h  pam.cc
auth/test/camera/: CMakeLists.txt  main.cpp
auth/test/face_engine/: CMakeLists.txt  Makefile  README.md  main.cpp  run.sh
auth/test/fingerprint/: CMakeLists.txt  main.cc
auth/test/pam/: main.cc
auth/test/unit/: CMakeLists.txt  antispoof_policy_test.cc  auth_config_test.cc  ir_liveness_analyzer_test.cc
auth/voice/: CMakeLists.txt  README.md  voice_auth.cc  voice_auth.h
core/: auth_config.cc  auth_config.h  model_registry.cc  model_registry.h
docs/: Configuration Lock.md  IR camera.md  PAM.md  Polkit.md  architecture.md  config-schema.md  contributing.md
face/: face_auth.h
face/antispoofing/: antispoof_check.cc  antispoof_check.h
fingerprint/: fingerprint_auth.cc
packaging/aur/: README.md
packaging/aur/biopass-bin/: .SRCINFO  PKGBUILD  biopass-bin.install
